Don't crash when changing KStyle and an empty tab is displayed. Fixes palindrome bug 176671.

BUG: 176671


svn path=/trunk/KDE/kdepim/; revision=937301